# libdomain-c-sample

./: CMakeLists.txt  README.RU.md  README.md  main.c
cmake/: FindLdap.cmake
